--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<div class="smashinglogo" data-type="sprite" data-offsetY="100" data-Xposition="50%" data-speed="-2"></div>		
 		<article>
 
-			<img src="images/tutorial-title.png" alt="tutorial-title" width="711" height="242" />
+			<!--img src="images/tutorial-title.png" alt="tutorial-title" width="711" height="242" /-->
+			<img src="images/Safafarra2018.jpg" alt="tutorial-title" width="711" height="242" />
 			<p>Comissió de la Safafarra 2018 / Twitter: <a href="http://twitter.com/safafarra2018" target="_blank">@safafarra2018</a> / Instagram: <a href="https://www.instagram.com/safafarra2018">@safafarra2018</a></p>
 			<!--<p>GitHub: <a href="https://github.com/richardshepherd/Parallax-Scrolling/">Fork it here!</a></p>-->
 	    </article>
